<resources>
    <string name="app_name">TokiToki</string>
    <string name="logo_name">TokiToki</string>
    <string name="google_btn_text">Googleでサインイン</string>
    <string name="mail_btn_text">メールアドレスでサインイン</string>
    <string name="sign_in_new_member_help_title">サインインや新規会員でお困りの方</string>
    <string name="terms_of_service">利用規約</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="cookie_policy">クッキーポリシー</string>
    <string name="register_title">メールアドレスを\n入力してください</string>
    <string name="register_btn_title">確認メールを送信</string>
    <string name="register_textfield_pressholder">tokitoki@example.com</string>
    <string name="register_error_dialog_ok">確認</string>
    <string name="validate_error_msg">正しくないフォマードです。メールを再入力してください。</string>
    <string name="validate_email_code_error_msg">認証番号を再入力してください。</string>
    <string name="verification_text">認証コードを\n入力してください。</string>
    <string name="verification_advice1">届いたメールに記載されている６桁の数字を入力してください。</string>
    <string name="verification_advice2">メールが届かない。</string>
    <string name="about_me_title">まず、あなたのことを\n教えてください。</string>
    <string name="about_me_next">次へ</string>
    <string name="agreement_confirmation_18">私は１８歳以上です。</string>
    <string name="agreement_confirmation_policy">私はTokiTokiのポリシーに同意します。</string>
    <string name="agreement_confirmation_policy_link">利用契約・プライバシーポリシーへの同意が必要です。</string>
    <string name="agreement_confirmation_submit">内容に同意して次へすすむ</string>
    <string name="validate_agreement_error_msg">利用契約・プライバシーポリシーへのチェックボックスを確認してください。</string>
    <string name="about_me_gender_title">あなたの性別を\n教えてください</string>
    <string name="about_me_gender_male">男性</string>
    <string name="about_me_gender_female">女性</string>
    <string name="about_me_validate_gender">性別を選択してください。</string>
    <string name="about_me_validate_birthday">生年月日を選択してください。</string>
...
