...
) {
    Column(
        modifier = modifier.fillMaxWidth(),
    ) {
        Text(
            modifier = Modifier.padding(top = 10.dp, start = 5.dp),
            text = "引目写真で雰囲気を伝えましょう",
            fontSize = 13.sp
        )

        Row(
            modifier = Modifier
                .fillMaxWidth()
...
